# OncoGraph-Engine

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.web  LICENSE  README.md  compare_evaluation_results.html  docker-compose.dev.yml  docker-compose.yml  model_evaluation_report.html  package.json  pyproject.toml  requirements.txt  run.py
api/: main.py
finetuning/: README.md  pyproject.toml  requirements-finetune.txt
finetuning/dataset/: executed_results.jsonl  generated_pairs.f1_1_targets_gene.jsonl  generated_pairs.f1_2_genes_for_therapy.jsonl  generated_pairs.f1_3_gene_of_variant.jsonl  generated_pairs.f1_4_variants_of_gene.jsonl  generated_pairs.f2_1_targets_properties.jsonl  generated_pairs.f2_2_gene_affects_therapy_disease.jsonl  generated_pairs.f2_2_gene_affects_therapy_disease_resistance.jsonl  generated_pairs.f2_2_gene_affects_therapy_disease_sensitivity.jsonl  generated_pairs.f2_2_variant_affects_therapy_disease.jsonl  generated_pairs.f2_2_variant_token_affects_therapy_disease.jsonl  generated_pairs.f2_3_evidential_pmids_variant_resistance.jsonl  generated_pairs.f2_3_evidential_pmids_variant_sensitivity.jsonl  generated_pairs.f2_4_variant_node_property.jsonl  generated_pairs.f3_3_therapies_target_a_not_b.jsonl  generated_pairs.f4_1_target_validation_gene_disease.jsonl  generated_pairs.f4_2_alternative_therapies_from_resistance_genes.jsonl  generated_pairs.f5_1_biomarkers_in_disease.jsonl  generated_pairs.f5_2_therapies_with_biomarker_evidence_in_disease.jsonl  generated_pairs.f6_1_resistance_genes_for_union_therapies_in_disease.jsonl  (+4 more)
(+207 files in other folders)
