[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncograph-finetuning"
version = "0.1.0"
requires-python = ">=3.11"
description = "OncoGraph finetuning utilities and dataset generation"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["oncograph_finetuning*"]


